arrumando posição e estilização

--- a/style.css
+++ b/style.css
@@ -13,20 +13,18 @@
 }
 
 .select_speed {
-    width: 12%;
-    font-size: 18px;
-    line-height: 18px;
     color: #009588;
-    outline: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    padding: 6px 0;
-    background-color: initial;
-    border: none;
-    border-bottom: 1px solid var(--border-strong);
-    border-radius: 0;
+    font-size: 0.9rem;
     font-weight: bold;
-    outline: none;
-    border: none;
+    background-color: transparent;
+    width: 10%;
+    line-height: 20px;
+    border-radius: 50%;
+    border: 1px solid #919191;
+    text-align-last: center;
+    padding: 9 px 0;
+}
+
+.select_speed > option:hover {
+    background-color: #f5f5f5;
 }
